# hulykvs

./: .gitignore  Cargo.toml  Justfile  README.md  commmit.sh
.github/workflows/: build.yml  pr-checks.yml
hulykvs/: Cargo.toml  hulykvs
hulykvs/src/: directory.rs  lib.rs  memory.rs
hulykvs_server/: Cargo.toml  Dockerfile  build.rs
hulykvs_server/etc/migrations/: V1__initial.sql  V2__add_workspace.sql  V2__workspace_uuid.sql  V5__workspace_uuid.sql
hulykvs_server/etc/migrations_crdb/: V1__initial.sql  V3__workspace_uuid.sql  V4__workspace_uuid.sql  V5__workspace_uuid.sql
hulykvs_server/etc/migrations_pg/: V1__initial.sql  V2__workspace_uuid.sql  V3__workspace_uuid.sql  V4__workspace_uuid.sql  V5__workspace_uuid.sql
hulykvs_server/src/: config.rs  handlers.rs  handlers_v2.rs  main.rs  token.rs
hulykvs_server/src/config/: default.toml
scripts/: claims.json  db_view.sh  shut.sh  shut_v2.sh  test_lib.sh  test_system.sh  tests.sh  token.sh  token.txt
scripts/off/: patch_uuid_in_migration.rs
scripts/off/desktop/.validate/: tsBuildInfoFile.info
