[package]
name = "hulykvs_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.97"
config = "0.15.4"
serde = "1.0.219"
actix-web = "4.10.2"
actix-cors = "0.7.1"
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
tokio-postgres = "0.7.13"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
md5 = "0.7.0"
jsonwebtoken = "9.3.1"

[[bin]]
name = "hulykvs"
path = "src/main.rs"
